force-app/main/default/objects/wkdw__TransitionPlan__c/wkdw__TransitionPlan__c.object-meta.xml
<CustomObject>
    <description>A transition plan that is associated to a specific employee</description>
    <label>Transition Plan</label>
    <nameField>
        <label>Transition Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transition Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>