force-app/main/default/objects/wkdw__TransitionPlan__c/fields/wkdw__CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>wkdw__CompletedDate__c</fullName>
    <label>CompletedDate</label>
    <type>DateTime</type>
</CustomField>