force-app/main/default/objects/wkdw__TransitionPlan__c/fields/wkdw__Description__c.field-meta.xml
<CustomField>
    <fullName>wkdw__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>