force-app/main/default/objects/wkdw__TransitionPlan__c/fields/wkdw__EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>wkdw__EffectiveDate__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>