force-app/main/default/objects/wkdw__TransitionPlan__c/fields/wkdw__Employee__c.field-meta.xml
<CustomField>
    <fullName>wkdw__Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee</referenceTo>
    <relationshipLabel>Transition Plans</relationshipLabel>
    <relationshipName>TransitionPlans</relationshipName>
    <type>Lookup</type>
</CustomField>