force-app/main/default/objects/wkdw__TransitionPlan__c/fields/wkdw__Manager__c.field-meta.xml
<CustomField>
    <fullName>wkdw__Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Do not use this field</description>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TransitionPlans</relationshipName>
    <type>Lookup</type>
</CustomField>