force-app/main/default/objects/wkdw__TransitionPlan__c/fields/wkdw__TransitionPlanTemplate__c.field-meta.xml
<CustomField>
    <fullName>wkdw__TransitionPlanTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transition Plan Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>wkdw__OnboardingTemplate__c.wkdw__IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>wkdw__OnboardingTemplate__c</referenceTo>
    <relationshipLabel>Transition Plans</relationshipLabel>
    <relationshipName>TransitionPlans</relationshipName>
    <type>Lookup</type>
</CustomField>