force-app/main/default/objects/wkdw__TransitionPlan__c/fields/wkdw__WelcomeText__c.field-meta.xml
<CustomField>
    <fullName>wkdw__WelcomeText__c</fullName>
    <description>The description that employees see at the top of their transition checklist.</description>
    <inlineHelpText>The description that employees see at the top of their transition checklist.</inlineHelpText>
    <label>Welcome Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>